Fix project card padding on mobile

--- a/scss/components/_project-card.scss
+++ b/scss/components/_project-card.scss
@@ -131,6 +131,7 @@
         padding: 2rem 0;
 
         .content {
+            margin: 0 2rem;
             max-width: calc(100% - 4rem);
             .main {
                 flex-direction: column;
